finalizando o header e iniciando main

--- a/SemânticaHTML/index.html
+++ b/SemânticaHTML/index.html
@@ -12,8 +12,10 @@
 <body>
     <!-- Inicio construção header -->
     <header>
+        <figure>
+            <img src="./assets/images/SENAI_São_Paulo_logo.png" alt="Imagem do senai em vermelho e branco" />
+        </figure>
         <!-- Responsável por atribuição de links de navegação e imagem do site -->
-
         <nav>
             <!-- Navegação -->
             <ul>
@@ -44,7 +46,55 @@
         </section>
 
     </header>
-    <main></main>
+    <main>
+
+        <article>
+            <h1>
+                Página de conteúdo principal
+            </h1>
+            <p>
+                Seção dedicada para conteúdos importantes dentro do nosso site!
+            </p>
+        </article>
+
+
+        <section class="card-section">
+            <figure>
+                <img id="image1" src="./assets/images/neom-axAbxUA32hE-unsplash.jpg" alt="">
+            </figure>
+            <article>
+                <h1>
+                    Primeira seção
+                </h1>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem eius fuga atque dolorum. Optio
+                    officia, cupiditate obcaecati est, placeat consequuntur nostrum porro odio commodi repudiandae
+                    reprehenderit recusandae nam esse distinctio perspiciatis ad vel nisi? Necessitatibus distinctio
+                    illum aliquam laudantium! Cum fugit delectus necessitatibus quis labore quibusdam nostrum molestias
+                    atque illum!
+                </p>
+            </article>
+        </section>
+        <br>
+        <section class="card-section">
+            <article>
+                <h1>
+                    Segunda seção
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates magni magnam deleniti
+                    reprehenderit reiciendis laudantium consectetur molestiae. Beatae itaque quaerat iste eligendi
+                    corporis dolorum cumque voluptates, ratione minus eum, provident harum. Incidunt, atque id. Aut
+                    dolores culpa facere vitae ullam vero labore dolore hic vel dignissimos. Ducimus laudantium at nam!
+                </p>
+            </article>
+
+            <figure>
+                <img id="image2" src="./assets/images/neom-epQdtCvBrc4-unsplash.jpg" alt="">
+            </figure>
+        </section>
+
+    </main>
     <footer></footer>
 </body>
 
