--- a/GithubFinder/github-user-search-app/starter-code/index.html
+++ b/GithubFinder/github-user-search-app/starter-code/index.html
@@ -21,7 +21,7 @@
         <h1>
           Devfinder
         </h1>
-        <i class="bi bi-moon-fill"></i>
+        <i id="toggle" class="bi bi-moon-fill" onclick="toggleTheme()"></i>
         <!-- <i class="bi bi-sun-fill"></i> -->
       </div>
       <article class="searchByUser">
@@ -40,7 +40,7 @@
         </div>
         <div class="container-flex__infos">
           <!-- essa seção vai ser resposável por receber os dados do usuário que está vindo da API -->
-          <div>
+          <article class="container-flex__infos-user">
             <h1>
               Guilherme Amorim
             </h1>
@@ -52,7 +52,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, cumque tempore nobis praesentium quod
               ratione rerum non labore incidunt architecto?
             </p>
-          </div>
+          </article>
           <div class="container-flex__date">
             <p>
               Joined 25 Jan 2011
@@ -64,16 +64,40 @@
               <h4>
                 repos
               </h4>
+              <p>
+                8
+              </p>
             </div>
             <div>
               <h4>
                 Followers
               </h4>
+              <p>
+                150
+              </p>
             </div>
             <div>
               <h4>
                 Following
               </h4>
+              <p>
+                30
+              </p>
+            </div>
+          </article>
+
+          <article class="container-flex__infos-user__refs">
+            <div class="bi bi-geo-alt-fill">
+              Location
+            </div>
+            <div class="bi bi-twitter">
+              Twitter
+            </div>
+            <div class="bi bi-link-45deg">
+              Links
+            </div>
+            <div class="bi bi-buildings">
+              residencia
             </div>
           </article>
         </div>
