--- a/Flexbox/Aula02/index.html
+++ b/Flexbox/Aula02/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="./styles/sytle.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <title>Blog - Guilherme</title>
 </head>
 <body >
@@ -19,11 +21,81 @@
                 </h4>
             </div>
             <div>
-                <i class="bi bi-house-fill"></i>
+                <i class="bi bi-search search-input" style="color: white;"></i>
                 <input type="text" name="" id="" placeholder="pesquisar no blog">
             </div>
         </section>
     </header>
-    <main></main>
+    <main >
+
+        <section class="container-grid card-style">
+            <div class="icon-flex">
+                <span>
+                    20/02/2024
+                </span>
+                <i class="bi bi-heart"> </i>
+            </div>
+            <article class="info-flex"> 
+                <h1>
+                    Agora é oficial: o Windows 11 está vindo
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nemo, minus a quisquam sint error.
+                </p>
+            </article>
+        </section>
+
+        <section class="container-grid card-style">
+            <div class="icon-flex">
+                <span>
+                    20/02/2024
+                </span>
+                <i class="bi bi-heart"> </i>
+            </div>
+            <article class="info-flex">
+                <h1>
+                    Agora é oficial: o Windows 11 está vindo
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nemo, minus a quisquam sint error.
+                </p>
+            </article>
+        </section>
+
+        <section class="container-grid card-style">
+            <div class="icon-flex">
+                <span>
+                    20/02/2024
+                </span>
+                <i class="bi bi-heart"> </i>
+            </div>
+            <article class="info-flex">
+                <h1>
+                    Agora é oficial: o Windows 11 está vindo
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nemo, minus a quisquam sint error.
+                </p>
+            </article>
+        </section>
+
+        <section class="container-grid card-style">
+            <div class="icon-flex">
+                <span>
+                    20/02/2024
+                </span>
+                <i class="bi bi-heart"> </i>
+            </div>
+            <article class="info-flex">
+                <h1>
+                    Agora é oficial: o Windows 11 está vindo
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nemo, minus a quisquam sint error.
+                </p>
+            </article>
+        </section>
+
+    </main>
 </body>
 </html>
