--- a/GithubFinder/github-user-search-app/starter-code/index.html
+++ b/GithubFinder/github-user-search-app/starter-code/index.html
@@ -10,7 +10,7 @@
   <!-- Link para icons externos -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="./styles/style.css">
-  <script src="./scripts/script.js"></script>
+  
 </head>
 
 <body class="">
@@ -28,7 +28,7 @@
         <!-- Seção para realizar a busca do usuario. Input e botão -->
         <i class="bi bi-search"></i>
         <input type="text" name="search" id="searchUser" placeholder="Pesquise por usuário do GitHub">
-        <button type="submit">
+        <button type="submit" id="search">
           Pesquisar
         </button>
       </article>
@@ -41,20 +41,20 @@
         <div class="container-flex__infos">
           <!-- essa seção vai ser resposável por receber os dados do usuário que está vindo da API -->
           <article class="container-flex__infos-user">
-            <h1>
+            <h1 id="nameUser">
               Guilherme Amorim
             </h1>
-            <p>
+            <p id="loginUser">
               @G648
             </p>
             <br>
-            <p id="bio-user">
+            <p id="bioUser">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, cumque tempore nobis praesentium quod
               ratione rerum non labore incidunt architecto?
             </p>
           </article>
           <div class="container-flex__date">
-            <p>
+            <p id="createdAt">
               Joined 25 Jan 2011
             </p>
           </div>
@@ -64,7 +64,7 @@
               <h4>
                 repos
               </h4>
-              <p>
+              <p  id="numRepos">
                 8
               </p>
             </div>
@@ -72,7 +72,7 @@
               <h4>
                 Followers
               </h4>
-              <p>
+              <p id="numFollowers">
                 150
               </p>
             </div>
@@ -80,7 +80,7 @@
               <h4>
                 Following
               </h4>
-              <p>
+              <p id="numFollowing">
                 30
               </p>
             </div>
@@ -104,6 +104,7 @@
       </section>
     </section>
   </main>
+  <script src="./scripts/script.js"></script>
 </body>
 
 </html>
