Alterando ingles -> portugues

--- a/localstorage-tutorial/index.html
+++ b/localstorage-tutorial/index.html
@@ -10,10 +10,10 @@
   <body>
     <main>
       <form id="studentForm">
-        <input type="text" placeholder="Student name" name="name" required />
-        <input type="number" placeholder="Student age" name="age" required />
-        <input type="number" placeholder="Student roll" name="roll" required />
-        <button>Add student</button>
+        <input type="text" placeholder="nome do estudante" name="name" required />
+        <input type="number" placeholder="Idade" name="age" required />
+        <input type="number" placeholder="numero de telefone" name="roll" required />
+        <button>Adicionar estudante</button>
       </form>
       <div class="students"></div>
     </main>
