--- a/BodyMassCalculator/bmi-calculator/starter-code/index.html
+++ b/BodyMassCalculator/bmi-calculator/starter-code/index.html
@@ -1,85 +1,179 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="´t-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./styles/style.css">
+
+  <script src="./scripts/script.js"></script>
   <title>Frontend Mentor | Body Mass Index Calculator</title>
 </head>
+
 <body>
+  <header class="banner-flex">
+    <img src="./assets/images/logo.svg" alt="Logo do site">
 
-  Body Mass Index Calculator
+    <section class="banner-flex__style">
+      <h1 class="banner-flex__title">
+        Body Mass Index Calculator
+      </h1>
 
-  Better understand your weight in relation to your height using our 
-  body mass index (BM) calculator. While BMI is not the sole determinant 
-  of a healthy weight, it offers a valuable starting point to evaluate 
-  your overall health and well-being.
+      <p class="banner-flex__paragraf">
+        Better understand your weight in relation to your height using our
+        body mass index (BM) calculator. While BMI is not the sole determinant
+        of a healthy weight, it offers a valuable starting point to evaluate
+        your overall health and well-being.
+      </p>
+    </section>
 
-  Enter your details below
+    <section class="form-position">
+      <form action="">
 
-  Metric
-  Imperial
+        <h1>
+          Enter your details below
+        </h1>
+
+        <div class="form-position__radio">
+          <div>
+            <input type="radio" name="select" id="" value="Metric">
+            <label for="metric"> Metric</label>
+          </div>
+          <div>
+            <input type="radio" name="select" id="" value="Imperial">
+            <label for="imperial">Imperial</label>
+          </div>
+        </div>
+
+        <div class="form-position__values">
+          <div class="form-position__values-flex">
+            <label for="">Height</label>
+            <input type="number" name="height" id="height" placeholder="0" step="0.01" min="0.1" max="10">
+            <p>
+              cm
+            </p>
+          </div>
+
+          <div class="form-position__values-flex">
+            <label for="">Weight</label>
+            <input type="number" name="Weight" id="Weight" placeholder="0" step="0.01" min="0.1" max="500">
+            <p>
+              kg
+            </p>
+          </div>
+        </div>
+
+        <div class="form-position__infoStyle">
+          <h2>Welcome</h2>
+          <p>Enter your height and weight and you’ll see your BMI result here</p>
+        </div>
+      </form>
+    </section>
+  </header>
+  <main>
+
+    <section class="container-grid">
+      <section class="mean-bmi">
+        <img src="./assets/images/image-man-eating.webp" alt="homem comendo um sushi gostoso">
+
+        <article class="mean-bmi__flex">
+          <h1>What your BMI result means</h1>
+
+          <p>A BMI range of 18.5 to 24.9 is considered a 'healthy weight.' Maintaining a
+            healthy weight may lower your chances of experiencing health issues later on,
+            such as obesity and type 2 diabetes. Aim for a nutritious diet with reduced
+            fat and sugar content, incorporating ample fruits and vegetables. Additionally,
+            strive for regular physical activity, ideally about 30 minutes daily for
+            five days a week.</p>
+        </article>
+      </section>
+
+
+      <section class="cards-flex">
+
+        <article class="cards-flex__style">
+          <img src="./assets/images/icon-eating.svg" alt="">
+
+          <h2>Healthy eating</h2>
+
+          <p> Healthy eating promotes weight control, disease prevention, better digestion, immunity, mental clarity,
+            and mood.</p>
+        </article>
+        <article class="cards-flex__style">
+          <img src="./assets/images/icon-exercise.svg" alt="">
+
+          <h2>Regular exercise</h2>
+
+          <p>Exercise improves fitness, aids weight control, elevates mood, and reduces disease risk, fostering wellness
+            and longevity.</p>
+        </article>
+        <article class="cards-flex__style">
+          <img src="./assets/images/icon-sleep.svg" alt="">
+
+          <h2>Adequate sleep</h2>
+
+          <p> Sleep enhances mental clarity, emotional stability, and physical wellness, promoting overall restoration
+            and rejuvenation.</p>
+        </article>
+
+      </section>
+    </section>
+
+  </main>
+  <footer></footer>
+
+
+
+
+
+  <!-- 
 
   Height
   Weight
 
-  Your BMI is...
+  Your BMI is... -->
 
   <!-- add score -->
 
-  Your BMI suggests you're <!-- add classification -->. 
-  Your ideal weight is between <!-- add range -->.
+  <!-- Your BMI suggests you're add classification. -->
+  <!-- Your ideal weight is between add range. -->
 
-  What your BMI result means
+  <!-- 
 
-  A BMI range of 18.5 to 24.9 is considered a 'healthy weight.' Maintaining a 
-  healthy weight may lower your chances of experiencing health issues later on, 
-  such as obesity and type 2 diabetes. Aim for a nutritious diet with reduced 
-  fat and sugar content, incorporating ample fruits and vegetables. Additionally, 
-  strive for regular physical activity, ideally about 30 minutes daily for 
-  five days a week.
 
-  Healthy eating
-  Healthy eating promotes weight control, disease prevention, better digestion, 
-  immunity, mental clarity, and mood.
+ 
 
-  Regular exercise
-  Exercise improves fitness, aids weight control, elevates mood, and reduces disease 
-  risk, fostering wellness and longevity.
-
-  Adequate sleep
-  Sleep enhances mental clarity, emotional stability, and physical wellness, promoting 
-  overall restoration and rejuvenation.
 
   Limitations of BMI
 
-  Although BMI is often a practical indicator of healthy weight, it is not suited for 
-  every person. Specific groups should carefully consider their BMI outcomes, and in 
+  Although BMI is often a practical indicator of healthy weight, it is not suited for
+  every person. Specific groups should carefully consider their BMI outcomes, and in
   certain cases, the measurement may not be beneficial to use.
 
   Gender
-  The development and body fat composition of girls and boys vary with age. Consequently, 
+  The development and body fat composition of girls and boys vary with age. Consequently,
   a child's age and gender are considered when evaluating their BMI.
 
   Age
-  In aging individuals, increased body fat and muscle loss may cause BMI to underestimate 
+  In aging individuals, increased body fat and muscle loss may cause BMI to underestimate
   body fat content.
 
   Muscle
-  BMI may misclassify muscular individuals as overweight or obese, as it doesn't 
+  BMI may misclassify muscular individuals as overweight or obese, as it doesn't
   differentiate muscle from fat.
 
   Pregnancy
-  Expectant mothers experience weight gain due to their growing baby. Maintaining a 
-  healthy pre-pregnancy BMI is advisable to minimise health risks for both mother 
+  Expectant mothers experience weight gain due to their growing baby. Maintaining a
+  healthy pre-pregnancy BMI is advisable to minimise health risks for both mother
   and child.
 
   Race
-  Certain health concerns may affect individuals of some Black and Asian origins at 
-  lower BMIs than others. To learn more, it is advised to discuss this with your 
-  GP or practice nurse.
+  Certain health concerns may affect individuals of some Black and Asian origins at
+  lower BMIs than others. To learn more, it is advised to discuss this with your
+  GP or practice nurse. -->
 
 </body>
+
 </html>
