finalizando mobile e desktop

--- a/BodyMassCalculator/bmi-calculator/starter-code/index.html
+++ b/BodyMassCalculator/bmi-calculator/starter-code/index.html
@@ -120,59 +120,80 @@
 
       </section>
     </section>
-
   </main>
-  <footer></footer>
+  <footer>
 
+    <section class="container-grid grid-footer__style">
 
+      <article class="title">
+        <h1> Limitations of BMI</h1>
+        <p>
+          Although BMI is often a practical indicator of healthy weight, it is not suited for
+          every person. Specific groups should carefully consider their BMI outcomes, and in
+          certain cases, the measurement may not be beneficial to use.</p>
+      </article>
 
+      <img class="arrow-right" src="./assets/images/pattern-curved-line-right.svg" alt="">
 
+      <section class="cards-style__footer card01">
+        <div class="card-info-style">
+          <img src="./assets/images/icon-gender.svg" alt="simbolo de gênero ">
+          <h4> Gender</h4>
+        </div>
+        <p>
+          The development and body fat composition of girls and boys vary with age. Consequently,
+          a child's age and gender are considered when evaluating their BMI.</p>
+      </section>
+      <div class="double-cards__style">
+        <section class="cards-style__footer card02">
+          <div class="card-info-style">
+            <img src="./assets/images/icon-age.svg" alt="simbolo de gênero ">
+            <h4> Age
+          </div>
+          </h4>
+          <p>
+            In aging individuals, increased body fat and muscle loss may cause BMI to underestimate
+            body fat content.
+          </p>
+        </section>
+        <section class="cards-style__footer card03">
+          <div class="card-info-style">
+            <img src="./assets/images/icon-muscle.svg" alt="simbolo de gênero ">
+            <h4> Muscle
+          </div>
+          </h4>
+          <p>
+            BMI may misclassify muscular individuals as overweight or obese, as it doesn't
+            differentiate muscle from fat.</p>
+        </section>
+      </div>
+      <div class="double-cards__style double-cards-2">
+        <section class="cards-style__footer card04">
+          <div class="card-info-style">
+            <img src="./assets/images/icon-pregnancy.svg" alt="simbolo de gênero ">
+            <h4> Pregnancy
+          </div>
+          </h4>
+          <p>
+            Expectant mothers experience weight gain due to their growing baby. Maintaining a
+            healthy pre-pregnancy BMI is advisable to minimise health risks for both mother
+            and child.</p>
+        </section>
+        <section class="cards-style__footer card05">
+          <div class="card-info-style">
+            <img src="./assets/images/icon-race.svg" alt="simbolo de gênero ">
+            <h4> Race
+          </div>
+          </h4>
+          <p>
+            Certain health concerns may affect individuals of some Black and Asian origins at
+            lower BMIs than others. To learn more, it is advised to discuss this with your
+            GP or practice nurse.</p>
+        </section>
+    </section>
+    </div>
 
-  <!-- 
-
-  Height
-  Weight
-
-  Your BMI is... -->
-
-  <!-- add score -->
-
-  <!-- Your BMI suggests you're add classification. -->
-  <!-- Your ideal weight is between add range. -->
-
-  <!-- 
-
-
- 
-
-
-  Limitations of BMI
-
-  Although BMI is often a practical indicator of healthy weight, it is not suited for
-  every person. Specific groups should carefully consider their BMI outcomes, and in
-  certain cases, the measurement may not be beneficial to use.
-
-  Gender
-  The development and body fat composition of girls and boys vary with age. Consequently,
-  a child's age and gender are considered when evaluating their BMI.
-
-  Age
-  In aging individuals, increased body fat and muscle loss may cause BMI to underestimate
-  body fat content.
-
-  Muscle
-  BMI may misclassify muscular individuals as overweight or obese, as it doesn't
-  differentiate muscle from fat.
-
-  Pregnancy
-  Expectant mothers experience weight gain due to their growing baby. Maintaining a
-  healthy pre-pregnancy BMI is advisable to minimise health risks for both mother
-  and child.
-
-  Race
-  Certain health concerns may affect individuals of some Black and Asian origins at
-  lower BMIs than others. To learn more, it is advised to discuss this with your
-  GP or practice nurse. -->
+  </footer>
 
 </body>
 
